--- a/algorithm-w.org
+++ b/algorithm-w.org
@@ -78,27 +78,119 @@ say /S/ is a unifier of /f(a, y)/ and /f(x, f(b, x))/.
   "A variable `x` occurs in `term` if and only if `t = f(s[1],...s[n])` for
   `n > 0` and either `s[i] = x` or `x` occurs in `s[i]` for some
   `i = 1,2,...,n`"
-  [x term]
-  (let [[t form] term]
-    (case t
-      ::app (when (contains? form :args)
-              (let [[[t' x' :as h] & args] (:args form)]
-                (or (and (= t' ::var) (= x x'))
-                    (occurs? x h)
-                    (and (seq args)
-                         (occurs? x [::app (assoc form :args args)])))))
-      ::var (= x form)
-      nil)))
+  [x [t form :as term]]
+  (case t
+    ::app (or (occurs? x (:op form))
+              (when (contains? form :args)
+                (let [[[t' x' :as h] & more] (:args form)]
+                  (or (and (= t' ::var) (= x x'))
+                      (occurs? x h)
+                      (and (seq more)
+                           (occurs? x [::app (assoc form :args more)]))))))
+    ::var (= x form)
+    nil))
 
 (comment
+
   (occurs? 'a (s/conform ::exp 'a))
+
   (occurs? 'a (s/conform ::exp '(f a)))
+
+  (occurs? 'a (s/conform ::exp '((f a) b)))
+
   (occurs? 'a (s/conform ::exp '((f b) a)))
+
   (occurs? 'a (s/conform ::exp '((f b) b c d a)))
+
   (occurs? 'a (s/conform ::exp '((f b) (g b) (h c (i a)))))
+
+  (occurs? 'a (s/conform ::exp '((f b) (g b) (h c (i d)))))
 
   )
 
+#+END_SRC
+
+#+BEGIN_SRC clojure
+(defn substitute [l term]
+  (if (empty? l)
+    term
+    (let [[t s] term]
+      (case t
+        ::var (let [[[t1 v1] & ss] l]
+                (if (= s v1) t1 (substitute ss term)))
+        ::app (if-let [args (:args s)]
+                (letfn [(arglist [r xs]
+                          (if (empty? xs)
+                            (reverse r)
+                            (let [[h & t] xs]
+                              (arglist (cons (substitute l h) r) t))))]
+                  [::app (assoc s :args (arglist [] args))])
+                term)))))
+
+#+END_SRC
+
+#+BEGIN_SRC sml
+fun subs [] term = term
+  | subs ((t1,v1)::ss) (term as Tyvar name) =
+      if name=v1 then t1 else subs ss term
+  | subs _ (term as Tyapp(name,[])) = term
+  | subs l (Tyapp(name,args)) =
+      let fun arglist r [] = rev r
+            | arglist r (h::t) =
+                arglist ((subs l h)::r) t
+      in
+        Tyapp(name, arglist [] args)
+      end
+#+END_SRC
+
+#+BEGIN_SRC sml
+fun compose [] s1 = s1
+  | compose (s::ss) s1 =
+      let fun iter r s [] = rev r
+            | iter r s ((t1,v1)::ss) =
+                iter (((subs [s] t1),v1)::r) s ss
+      in
+        compose ss (s::(iter [] s s1))
+      end
+#+END_SRC
+
+#+BEGIN_SRC clojure
+
+(defn compose
+  "Composition of lists of substitutions"
+  [s s1]
+  (if (empty? s)
+    s1
+    (let [iter (fn [r s ss]
+                 (if (seq ss)
+                   (let [[[t1 v1] & ss'] ss]
+                     (iter (conj r [(substitute [s] t1) v1])
+                           s
+                           ss'))
+                   r))
+          [s & ss] s]
+      (prn s ss)
+      (compose ss (cons s (iter [] s s1))))))
+
+(compose '[a] '[a])
+
+(defn unify-ex [s]
+  (throw (ex-info s {:type :unify})))
+
+#+END_SRC
+
+#+BEGIN_SRC clojure
+
+(defn unify-args [r t1s t2s])
+
+#+END_SRC
+
+#+BEGIN_SRC sml
+fun unify_args r [] [] = rev r
+  | unify_args r [] _ = raise Unify "Arity"
+  | unify_args r _ [] = raise Unify "Arity"
+  | unify_args r (t1::t1s) (t2::t2s) =
+      unify_args (compose (iter [] (subs r t1) (subs r t2)) r) t1s t2s
 #+END_SRC
 
 The Hindley-Milner Type Inference Algorithm
